app/html/style/badges.css
body {
    min-height: 1000px;
    margin: 0px;
    background-color: whitesmoke;
    text-align: center;
}

#category-menu {
    margin-top: 30px;
    width: 100%;
}

.category {
    width: 200px;
    display: inline-block;
    font-size: 2.5em;
    border: 2px solid black;
    margin-left: 5px;
    margin-right: 5px;
    background-color: lightgrey;
}

.category:hover {
    background-color: grey;
}

.category-selected {
    border-bottom: none;
    background-color: whitesmoke;
}

/* Badges Normal */

#badges {
    margin-left: 2%;
    margin-right: 2%;
}

.badge {
    display: inline-block;
    vertical-align: center;
    width: 250px;
}

.inactive {
    height: 250px;
    animation: float 8s linear infinite;
}

.inactive:hover {
    animation: excited .4s linear infinite;
}

.badge-title {
    margin-top: 0px;
    transform: translateY(-10px);
}

h3 {
    display: inline-block;
}

/* Badges Selected */

.active {
    width: 100%;
}

/* Badges visible/hidden */
.visible {
    display: inline-block;
}

.hidden {
    display: none;
}

/* Reqs */
.reqs {
    width: 95%;
    text-align: left;
}

.req {
    margin-top: 10px;
}

.req-image {
    width: 25px;
    margin-right: 5px;
}

.req-text {
    margin-left: 35px;
    display: block;
    font-weight: 300;
    font-size: 1.5em;
}

.req-link {
    margin-left: 35px;
    font-size: 2em;
    display: inline-block;
}

a:hover {
    text-decoration: none;
}

.hide {
    display: none;
}

.show {
    display: inline-block;
    vertical-align: top;
    animation: show .2s ease-out;
}

/* MISSING AND LOCKED STYLES */
.missing > img, .missing > h2 {
    opacity: .75;
    filter: grayscale(100%);
}

.locked {
    opacity: .35;
    filter: grayscale(100%);
}

/* Admin styles */
form {
    text-align: left;
}

form > button {
    margin-top: 10px;
    width: 100px;
}

label {
    font-size: 1.8rem;
}

#get-user {
    margin-left: 30%;
    text-align: center;
    max-width: 40%;
}

.form-check-input {
    margin-top: 20px;
    transform: scale(2);
}

/* keyframes */

@keyframes glow_gold {
    0% {
        box-shadow: 0 0 5px #c4a300;
    }
    40% {
        box-shadow: 0 0 40px #c4a300;
    }
    60% {
        box-shadow: 0 0 40px #c4a300;
    }
    100% {
        box-shadow: 0 0 5px #c4a300;
    }
}

@keyframes glow_dark {
    0% {
        box-shadow: 0 0 5px #241e00;
    }
    40% {
        box-shadow: 0 0 10px #241e00;
    }
    60% {
        box-shadow: 0 0 10px #241e00;
    }
    100% {
        box-shadow: 0 0 5px #241e00;
    }
}

@keyframes float {
    0% {
        transform: translateY(0px) rotateZ(0deg);
    }

    25% {
        transform: translateY(4px) rotateZ(1deg);
    }

    50% {
        transform: translateY(8px) rotateZ(0deg);
    }

    75% {
        transform: translateY(4px) rotateZ(-1deg);
    }

    100% {
        transform: translateY(0px) rotateZ(0deg);
    }
}

@keyframes excited {
    0% {
        transform: translateY(0px) rotateZ(0deg);
    }

    25% {
        transform: translateY(4px) rotateZ(3deg);
    }

    50% {
        transform: translateY(8px) rotateZ(0deg);
    }

    75% {
        transform: translateY(4px) rotateZ(-3deg);
    }

    100% {
        transform: translateY(0px) rotateZ(0deg);
    }
}

@keyframes rank-float {
    0% {
        transform: scale(1.0) rotateZ(0deg);
    }

    25% {
        transform: scale(1.02) rotateZ(-.5deg);
    }

    50% {
        transform: scale(1.04) rotateZ(0deg);
    }

    75% {
        transform: scale(1.02) rotateZ(.5deg);
    }

    100% {
        transform: scale(1.0) rotateZ(0deg);
    }
}

